CHANGELOG

When		Who		What
======================================================================================
2019-02-09      Richard Forth   Revert changes made in  #283
				This went in staging but then got reverted as
				it caused problems and had inexpected
				behaviour.
2019-02-09      Richard Forth   Closes Issue #283
				Service detection inprovements to include
				services not running as root (eg vcache)
2019-02-01      Richard Forth   Closes Issue #12
				Detect and skip unexpected directories in
				glob. Previously these were added to the list
				of files for processing and caused an
				exception to be raised.
2019-01-23      Richard Forth   Closes Issue #287
				Typo on --skip-os-version-check option
				rectified.
2019-01-08      psytester       Added support for SUSE Linux and apache in
				/opt/apache2
2018-12-02      Richard Forth   Closes Issue #281
				Php memory limit was only interpretted in MB.
				Forced a change that accepts whatever is in
				the config, eg '128M' or '16G'.
2018-10-13      Richard Forth   Closes Issue #278
				logs to log (spelling correction in verbiage)
2018-10-13      Richard Forth   Closes Issue #194
				Detect issues getting package updates.
2018-10-13      Richard Forth   Closes Issue #245
				Skip OS Version Check option, see --help.
2018-10-13      Richard Forth   Closes Issue #221
				Log Uptime in /var/log/apache2buddy.log
2018-10-13      Richard Forth   Closes Issue #251 
				Warn if vhost_count exceeds maxclients
2018-10-12      Richard Forth   Closes Issue #273 Graceful catch of syntax
				error in httpd.conf when parsing config.
2018-10-12      Richard Forth   Closes Issue #252 Add verbiage about Apache
				2.2 EOL. Refer to https://httpd.apache.org/.
2018-10-12      Richard Forth   Closes Issue #255 Ignore large gzipped files.
2018-10-12      Richard Forth   Closes Issue #268 Additional verbiage about
				maxclients/maxrequestworkers being hit only
				once per lifetime.
