@@ -2,6 +2,10 @@ CHANGELOG
 
 When		Who		What
 ======================================================================================
+2019-02-09      Richard Forth   Closes Issue #283
+				This update treates varnich differently to
+				other detected services due to changes in
+				behvious from 4.1+
 2019-02-09      Richard Forth   Revert changes made in  #283
 				This went in staging but then got reverted as
 				it caused problems and had inexpected
